fixed alignment issue again

--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -61,7 +61,7 @@
     "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
-.subtitle {
+#subtitle {
   position: relative;
   text-align: center;
   height: 50px;
